@@ -2,6 +2,6 @@ DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 
 DIST upkern-3.1.9.tar.gz 20215 RMD160 f5f6190372c9a067d397bbe05f99b05e7212161b SHA1 90dd99a982729c5a27f3d97ddc4ed40e5c54925e SHA256 791c39279b019b285afc1ae7dd409e498909b1a1fd3e115a93967fc040cdaccd
 EBUILD upkern-3.1.8.ebuild 830 RMD160 4c95c1193cfbcd68899ffd1bd910663572e0e79e SHA1 bdbf548ad52a308df62d7095d4612292e103b387 SHA256 3bf6565960b3e3d459fcefadc8c469f3f69e1d6f902362cfa7297986a2eefeaf
 EBUILD upkern-3.1.9.ebuild 859 RMD160 576d7886aa7cd6c7f7c7eeb5032cbb8db5334386 SHA1 efd10847107f1cea8cf42898f4bfa84fde09a5ad SHA256 a7e08e28440b45245e59c219c87a26cc8b7cccd7e0ecece074b2414bc1e254d8
-EBUILD upkern-9999.ebuild 568 RMD160 1d1ee3cdb31a645426bad688de4aa870d07da878 SHA1 4984f0e56d608aace408947772093e970a339402 SHA256 7a25914a782adec6e84ddfc58acfde1747107a9e0676842167ebd949906b575f
-MISC ChangeLog 2740 RMD160 0e1cec6783d53edf1b896c4446e9fd9614b21aac SHA1 31f0bf0008c419801f86029e30e66479cda62098 SHA256 11aac4e12f236e115b2a94715cdffad7b707a1ce042fb99d51c9510dd24abcc6
-MISC metadata.xml 384 RMD160 81ffa6035c7e7627d6551b470adac8ca87607eab SHA1 ec634b494e8b5f392294651a3bd6ceacd9a6a25f SHA256 bc16e6148bb9ad2a18b1c4d2778593286c62c0bc4700743c0d360c84a0439b02
+EBUILD upkern-9999.ebuild 595 RMD160 c00e0418701ef0f41ca13cf81835cf391d64e682 SHA1 f218ef8af431e5fa5dcf43a2fabd8d9a30435ff6 SHA256 51d226fefed3c5b06be32be979821d24c619087b66267994fa645e6ee258b42f
+MISC ChangeLog 2826 RMD160 979a6e2e63ec1253cf7a0c782793f69e1962b7f9 SHA1 0f64ce929773e9c671c49675aee073ba09704c91 SHA256 22ab38716890890034ee77d1154b52789660ea6f86805cd5e7a61361ad97dd6a
+MISC metadata.xml 461 RMD160 40a4b831510c1f251095f6972e96260b39020cff SHA1 95e1e29d323fbb6511a26c2c9ade93c19a9bf100 SHA256 2610c87e47dd4156c2fa3b7c2eb5767a62ff4efac3a88c6f1416475acc963289
